tests/explicit-nulls/pos/i25228/Foo.java
import org.jspecify.annotations.Nullable;

public record Foo(@Nullable String param) {}